--- a/angular.json
+++ b/angular.json
@@ -63,6 +63,7 @@
               "buildTarget": "toDoList-page:build:production"
             },
             "development": {
+              "proxyConfig": "src/proxy.conf.json",
               "buildTarget": "toDoList-page:build:development"
             }
           },
